refactor: repository 대신 service 의존