@@ -1,6 +1,8 @@
 package beachcombing.backend.domain.record.service;
 
 import beachcombing.backend.domain.beach.domain.Beach;
+import beachcombing.backend.domain.beach.service.BeachService;
+import beachcombing.backend.domain.member.service.MemberService;
 import beachcombing.backend.domain.record.dto.RecordByBeachFindAllResponse;
 import beachcombing.backend.domain.beach.repository.BeachRepository;
 import beachcombing.backend.domain.member.domain.Member;
@@ -27,14 +29,14 @@ public class RecordService {
     private final RecordRepository recordRepository;
 
     //private final ImageService imageService;
-    private final MemberRepository memberRepository;
-    private final BeachRepository beachRepository;
+    private final MemberService memberService;
+    private final BeachService beachService;
     private final RecordMapper recordMapper;
 
     // 청소 기록하기
     public RecordSaveResponse saveRecord(Long memberId, RecordSaveRequest request){
-        Member member = getMember(memberId);
-        Beach beach = getBeach(request.beachId);
+        Member member = memberService.getMember(memberId);
+        Beach beach = beachService.getBeach(request.beachId);
 
         // 이미지 업로드
         //String beforeUuid = imageService.uploadImage(request.beforeImage);
@@ -52,7 +54,7 @@ public class RecordService {
     // 자신의 청소기록 목록 조회
     @Transactional(readOnly = true)
     public List<RecordFindAllResponse> findAllRecord(Long memberId) {
-        Member member = getMember(memberId);
+        Member member = memberService.getMember(memberId);
 
         List<RecordFindAllResponse> response = recordRepository.findByMember(member).stream()
                 .map(record -> {
@@ -63,15 +65,15 @@ public class RecordService {
                     String afterImageUrl = "afterImageUrl";
                     return recordMapper.toRecordFindAllResponse(record, beforeImageUrl, afterImageUrl, isWritten);
                 })
-                .collect(Collectors.toList());
+                .toList();
         return response;
     }
 
     // (지도) 특정 해변 청소 기록 목록 조회
     @Transactional(readOnly = true)
     public RecordByBeachFindAllResponse findAllRecordByBeach(Long memberId, Long beachId) {
-        Member member = getMember(memberId);
-        Beach beach = getBeach(beachId);
+        Member member = memberService.getMember(memberId);
+        Beach beach = beachService.getBeach(beachId);
 
         List<RecordDto> recordDtoList = recordRepository.findByMemberAndBeachOrderByCreatedDateDesc(member, beach).stream()
                 .map(record -> {
@@ -94,19 +96,6 @@ public class RecordService {
 
     public List<Record> getRecords(Member member){
         return recordRepository.findByMember(member);
-    }
-
-
-    // 예외 처리 - 존재하는 member 인가
-    public Member getMember(Long memberId) {
-        return memberRepository.findById(memberId)
-                .orElseThrow(() -> new CustomException(ErrorCode.NOT_FOUND_MEMBER));
-    }
-
-    // 예외 처리 - 존재하는 beach 인가
-    private Beach getBeach(Long beachId) {
-        return beachRepository.findById(beachId)
-                .orElseThrow(() -> new CustomException(ErrorCode.NOT_FOUND_BEACH));
     }
 
 }
